fix title wrap

--- a/src/styles/partials/media.less
+++ b/src/styles/partials/media.less
@@ -339,12 +339,12 @@
       margin-bottom: 190px;
       .lead {
         /*font-size: 38px;*/
-        font-size: 11.7vw;
+        font-size: 11vw;
         line-height: 45px;
         margin-bottom: 29px;
         .popup-stroke {
           box-shadow: inset 0px -5px 0px @color-accent;
-          line-height: 9.5vw;
+          line-height: 9vw;
         }
       }
       .sub-lead {
@@ -356,7 +356,7 @@
         .popup-stroke {
           box-shadow: inset 0px -5px 0px @color-accent;
           /*line-height: 30px;*/
-          line-height: 6vw;
+          line-height: 5.5vw;
         }
         br {
           /*display: none;*/
